Added the readme file and svg icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<a href="https://entanglesoftware.com">
+  <img src="/assets/logo/logo.png" width="250px" class="company-logo" />
+</a>
 <div class="donught-row">
   <!--Default segment config -->
   <div class="donught-container">
