--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,3 +8,9 @@
   flex-flow: row wrap;
   justify-content: space-evenly;
 }
+
+.company-logo {
+  width: 250px;
+  margin-left: 50px;
+  margin-top: 30px;
+}
