Fixed the image not being seen in the svg donught url

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <a href="https://entanglesoftware.com">
-  <img src="/assets/logo/logo.png" width="250px" class="company-logo" />
+  <img src="./assets/logo/logo.png" width="250px" class="company-logo" />
 </a>
 <div class="donught-row">
   <!--Default segment config -->
